# claude-skill-repo

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml
.claude-plugin/: marketplace.json
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  custom.yml  epic.yml  feature_request.yml  skill_improvement.yml
.github/workflows/: pull-request.yml
plugins/read_data/.claude-plugin/: plugin.json
plugins/read_data/skills/read_athena/: SKILL.md
tests/: test_scaffold.py  test_smoke.py
