[project]
name = "larson-claude-plugins"
version = "0.1.0"
description = "A Claude Code plugin marketplace for data reading, quality, validation, and verification workflows."
requires-python = ">=3.12"

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
